# mold

./: .gitignore  Cargo.toml  Dockerfile  README.md  input_program.py  input_program.txt  mold.sh
src/: ast_add_types.rs  ast_structure.rs  built_in_funcs.rs  copy_folder.rs  macros.rs  main.rs  mold_ast.rs  mold_tokens.rs  play_ground.rs  to_python.rs  to_rust.rs  types.rs
src/add_types/: ast_add_types.rs  generics.rs  mod.rs  polymorphism.rs  utils.rs
src/construct_ast/: ast_structure.rs  find_generics.rs  get_functions_and_types.rs  get_typ.rs  make_func_struct_trait.rs  mod.rs  mold_ast.rs  tree_utils.rs
tests/: algos.mo  algos.py  built_ins.mo  built_ins.py  enums.mo  enums.py  generics.mo  generics.py  input_program.mo  input_program.py  lists.mo  lists.py  mold_core_built_ins.py  pointers.mo  pointers.py  polimorphism.mo  polimorphism.py  tictactoe.mo  unions.mo
tests/import_package/: imports.mo
tests/import_package/print_util/: print_file.mo
tests/import_package_BACKUP/: imports.mo
