[package]
name = "mold"
version = "0.1.0"
edition = "2021"

#lto = "fat"
#codegen-units = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pretty-print-tree = { path = "../pretty-print-tree" }
#primitives_macro = { path = "primitives_macro" }

regex = "*"
fancy-regex = "0.11.0"
once_cell = "1.16.0"

